# healthcare-observability-generator

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
config/hospital/: device_profiles.yaml  topology.yaml
config/scenarios/: core-switch-failure.json  ed-surge.json  epic-outage-network-root-cause.json  hl7-interface-failure.json  insider-threat-snooping.json  iomt-device-compromise.json  mychart-credential-stuffing.json  normal-day-shift.json  ransomware-attack.json
deploy/docker/: Dockerfile.epic  Dockerfile.network  Dockerfile.webui  docker-compose.yaml
docs/: ARCHITECTURE.md  DEMO-FLOW.md  DYNATRACE_APP_REVIEW.md  DYNATRACE_ASSETS.md  DYNATRACE_INGESTION_ADVISORY.md  LESSONS-LEARNED.md  PROMPT-ANALYSIS.md  PROMPTING_INSIGHTS.md  PROMPT_APPENDIX.md  SCENARIO-TEST-REPORT.md
dynatrace-apps/healthcare-health-monitoring/: .gitignore  .prettierrc  app.config.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
dynatrace-apps/healthcare-health-monitoring-original/: package-lock.json
dynatrace-assets/: README.md  anomaly-detectors.json  log-event-alerts-classic.json  metric-event-alerts-classic.json  openpipeline-healthcare.json
scripts/: test_scenarios.py
src/epic_generator/: config.json  mirth_metrics.py  orchestrator.py  scheduler.py
src/network_generator/: __init__.py  cli.py  config.yaml  default-topology.yaml  large-topology.yaml  small-topology.yaml
src/shared/: __init__.py  coordinator.py  generator_manager.py
webui/: app.py
webui/static/: app.js  discovery.css  discovery.js  style.css  (+4 more)
(+136 files in other folders)
