[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-observability-generator"
version = "1.0.0"
description = "Combined Epic SIEM + Network log generator for Lakeside Regional Medical Center — synthetic healthcare observability data for Dynatrace"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Viet Pham", email = "viet.pham@dynatrace.com"},
]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "aiohttp>=3.9",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
healthcare-gen-ui = "webui.app:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["epic_generator*", "network_generator*", "shared*", "webui*"]

[tool.ruff]
line-length = 100
target-version = "py311"
